--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "sass-loader": "^6.0.6",
     "static-site-generator-webpack-plugin": "^3.1.0",
     "style-loader": "^0.19.0",
+    "svg-sprite-loader": "^3.4.1",
+    "svgo": "^1.0.2",
+    "svgo-loader": "^2.0.0",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
   },
