Update package name

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "fila",
+  "name": "waitress",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "author": "Evan Purkhiser",
   "license": "MIT",
   "dependencies": {
