--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,10 +1,6 @@
 [[constraint]]
-  branch = "master"
-  name = "github.com/rjeczalik/notify"
-
-[[constraint]]
-  name = "github.com/gorilla/handlers"
-  version = "1.2.1"
+  name = "github.com/gorilla/mux"
+  version = "1.6.2"
 
 [[constraint]]
   branch = "master"
