--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "license": "MIT",
   "dependencies": {
     "classnames": "^2.2.5",
+    "emotion": "^9.2.6",
     "pretty-bytes": "^4.0.2",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "react-emotion": "^9.2.6"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
@@ -16,14 +18,10 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-1": "^6.24.1",
-    "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.28.0",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
     "static-site-generator-webpack-plugin": "^3.1.0",
-    "style-loader": "^0.19.0",
     "svg-sprite-loader": "^3.4.1",
     "svgo": "^1.0.2",
     "svgo-loader": "^2.0.0",
