--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -5,3 +5,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/GeertJohan/go.rice"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/getsentry/raven-go"
