--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "emotion": "^9.2.6",
     "pretty-bytes": "^5.1.0",
+    "raven-js": "^3.26.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-emotion": "^9.2.6"
