--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "license": "MIT",
   "dependencies": {
     "emotion": "^9.2.6",
+    "preact": "^8.3.1",
+    "preact-compat": "^3.18.2",
     "pretty-bytes": "^5.1.0",
     "prop-types": "^15.6.2",
     "raven-js": "^3.26.4",
-    "react": "^16.0.0",
     "react-document-title": "^2.0.3",
-    "react-dom": "^16.0.0",
     "react-emotion": "^9.2.6"
   },
   "devDependencies": {
