--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: go
 
 before_install:
+- sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
+- echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
 - sudo apt-get update -qq
-- sudo apt-get install -qq yarn
+- sudo apt-get install -y -qq yarn
 - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
 
 script: make
