--- a/package.json
+++ b/package.json
@@ -5,25 +5,25 @@
   "author": "Evan Purkhiser",
   "license": "MIT",
   "dependencies": {
-    "emotion": "^9.2.6",
+    "@sentry/browser": "^4.3.4",
+    "emotion": "^9.2.12",
     "preact": "^8.3.1",
     "preact-compat": "^3.18.2",
     "pretty-bytes": "^5.1.0",
     "prop-types": "^15.6.2",
-    "raven-js": "^3.26.4",
     "react-document-title": "^2.0.3",
-    "react-emotion": "^9.2.6"
+    "react-emotion": "^9.2.12"
   },
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-1": "^6.24.1",
-    "file-loader": "^1.1.5",
+    "@babel/core": "^7.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "static-site-generator-webpack-plugin": "^3.1.0",
-    "svg-sprite-loader": "^3.4.1",
+    "svg-sprite-loader": "^4.1.3",
     "svgo": "^1.0.2",
     "svgo-loader": "^2.0.0",
     "webpack": "^4.16.4",
