--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "author": "Evan Purkhiser",
   "license": "MIT",
   "dependencies": {
+    "@emotion/core": "^10.0.0",
+    "@emotion/styled": "^10.0.0",
     "@sentry/browser": "^4.3.4",
-    "emotion": "^9.2.12",
     "preact": "^8.3.1",
     "preact-compat": "^3.18.2",
     "pretty-bytes": "^5.1.0",
     "prop-types": "^15.6.2",
-    "react-document-title": "^2.0.3",
-    "react-emotion": "^9.2.12"
+    "react-document-title": "^2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
@@ -20,7 +20,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
-    "file-loader": "^2.0.0",
+    "file-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "static-site-generator-webpack-plugin": "^3.1.0",
     "svg-sprite-loader": "^4.1.3",
