--- a/package.json
+++ b/package.json
@@ -5,29 +5,32 @@
   "author": "Evan Purkhiser",
   "license": "MIT",
   "dependencies": {
-    "@emotion/core": "^10.0.0",
-    "@emotion/styled": "^10.0.0",
-    "@sentry/browser": "^4.3.4",
-    "preact": "^8.3.1",
-    "preact-compat": "^3.18.2",
-    "pretty-bytes": "^5.1.0",
-    "prop-types": "^15.6.2",
-    "react-document-title": "^2.0.3"
-  },
-  "devDependencies": {
     "@babel/core": "^7.1.0",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "@emotion/core": "^10.0.0",
+    "@emotion/styled": "^10.0.0",
+    "@sentry/browser": "^4.3.4",
     "babel-loader": "^8.0.4",
     "file-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "preact": "^8.3.1",
+    "preact-compat": "^3.18.2",
+    "pretty-bytes": "^5.1.0",
+    "prop-types": "^15.6.2",
+    "react-document-title": "^2.0.3",
     "static-site-generator-webpack-plugin": "^3.1.0",
     "svg-sprite-loader": "^4.1.3",
     "svgo": "^1.0.2",
     "svgo-loader": "^2.0.0",
     "webpack": "^4.16.4",
-    "webpack-cli": "^3.1.0",
+    "webpack-cli": "^3.1.0"
+  },
+  "devDependencies": {
+    "@evanpurkhiser/eslint-config": "^0.5.0",
+    "eslint": "^5.16.0",
+    "prettier": "^1.17.0",
     "webpack-dev-server": "^3.1.5"
   },
   "scripts": {
