--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "babel-loader": "^8.0.4",
     "file-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "preact": "^8.3.1",
-    "preact-compat": "^3.18.2",
     "pretty-bytes": "^5.1.0",
     "prop-types": "^15.6.2",
+    "react": "^16.0.0",
     "react-document-title": "^2.0.3",
+    "react-dom": "^16.8.6",
     "static-site-generator-webpack-plugin": "^3.1.0",
     "svg-sprite-loader": "^4.1.3",
     "svgo": "^1.0.2",
