--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "svg-sprite-loader": "^4.1.3",
     "svgo": "^1.0.2",
     "svgo-loader": "^2.0.0",
+    "typescript": "^4.0.2",
     "webpack": "^4.16.4",
     "webpack-cli": "^3.1.0"
   },
