--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "@emotion/core": "^10.0.0",
-    "@emotion/styled": "^10.0.0",
-    "@sentry/browser": "^5.13.0",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@sentry/browser": "^6.2.5",
     "babel-loader": "^8.0.4",
     "file-loader": "^6.1.0",
-    "html-webpack-plugin": "^4.4.1",
+    "html-webpack-plugin": "^5.3.1",
     "pretty-bytes": "^5.1.0",
     "prop-types": "^15.6.2",
-    "react": "^16.0.0",
+    "react": "^17.0.2",
     "react-document-title": "^2.0.3",
-    "react-dom": "^16.8.6",
+    "react-dom": "^17.0.2",
     "static-site-generator-webpack-plugin": "^3.1.0",
-    "svg-sprite-loader": "^4.1.3",
-    "svgo": "^1.0.2",
-    "svgo-loader": "^2.0.0",
+    "svg-sprite-loader": "^6.0.2",
+    "svgo": "^2.3.0",
+    "svgo-loader": "^3.0.0",
     "typescript": "^4.0.2",
-    "webpack": "^4.16.4",
-    "webpack-cli": "^3.1.0"
+    "webpack": "^5.30.0",
+    "webpack-cli": "^4.6.0"
   },
   "devDependencies": {
     "@evanpurkhiser/eslint-config": "^0.9.1",
@@ -36,6 +36,6 @@
   },
   "scripts": {
     "build": "webpack --mode=production",
-    "server": "webpack-dev-server --watch --hot --mode=development"
+    "server": "webpack serve --hot --mode=development"
   }
 }
