--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
       - name: Build
         run: docker build --tag=evanpurkhiser/waitress:latest .
       - name: Publish
+        if: ${{ github.ref == 'refs/heads/master' }}
         run: |
           docker login --username=evanpurkhiser --password-stdin <<< "${{ secrets.DOCKER_HUB_TOKEN }}"
           docker push evanpurkhiser/waitress:latest
