--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sentry/browser": "^6.13.3",
     "@sentry/react": "^6.13.3",
     "@sentry/tracing": "^6.13.3",
+    "@types/node": "^16.11.2",
     "@types/react": "^17.0.31",
     "@types/react-dom": "^17.0.10",
     "@types/svg-sprite-loader": "^3.9.4",
