--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-loader": "^8.2.5",
     "file-loader": "^6.1.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
+    "fuse.js": "^6.6.2",
     "html-webpack-plugin": "^5.5.0",
     "pretty-bytes": "^5.6.0",
     "react": "^18.2.0",
