--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "typescript-styled-plugin": "^0.18.2",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "zustand": "^4.1.0"
   },
   "devDependencies": {
     "@evanpurkhiser/eslint-config": "^0.12.0",
