Improve unchecked index access

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "inlineSources": true,
     "outDir": "./dist",
     "strict": true,
+    "noUncheckedIndexedAccess": true,
     "rootDir": "./components",
     "plugins": [
       {
