--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "esModuleInterop": true,
     "lib": ["dom", "ESNext"],
     "allowJs": true,
-    "jsx": "react-jsxdev",
+    "jsx": "react-jsx",
     "sourceMap": true,
     "inlineSources": true,
     "outDir": "./dist",
@@ -20,5 +20,5 @@
       }
     ]
   },
-  "include": ["./components"]
+  "include": ["**/*.tsx"]
 }
