--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,15 +11,30 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Build
-        run: docker build --tag=evanpurkhiser/waitress:latest .
-      - name: GHCR Authenticate
-        uses: docker/login-action@v3
-        if: ${{ github.ref == 'refs/heads/main' }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@3
+
+      - name: Extract metadata for image
+        id: metadata
+        uses: docker/metadata-action@5
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Publish
-        if: ${{ github.ref == 'refs/heads/main' }}
-        run: docker push evanpurkhiser/waitress:latest
+          images: ghcr.io/${{ github.repository }}
+          tags: type=sha,prefix=,format=long
+          labels: |
+            org.opencontainers.image.title=${{ github.event.repository.name }}
+            org.opencontainers.image.description=${{ github.event.repository.description }}
+            org.opencontainers.image.revision=${{ github.sha }}
+            org.opencontainers.image.version=${{ github.sha }}
+            org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
+            org.opencontainers.image.url=${{ github.server_url }}/${{ github.repository }}
+
+      - name: Build
+        uses: docker/build-push-action@6
+        with:
+          context: .
+          tags: ghcr.io/${{ github.repository }}:latest
+          cache-to: type=gha,mode=max
+          cache-from: type=gha
+          annotations: ${{ steps.meta.outputs.annotations }}
+          push: ${{ github.ref == 'refs/heads/main' }}
