--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,11 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@3
+        uses: docker/setup-buildx-action@v3
 
       - name: Extract metadata for image
         id: metadata
-        uses: docker/metadata-action@5
+        uses: docker/metadata-action@v5
         with:
           images: ghcr.io/${{ github.repository }}
           tags: type=sha,prefix=,format=long
@@ -30,7 +30,7 @@ jobs:
             org.opencontainers.image.url=${{ github.server_url }}/${{ github.repository }}
 
       - name: Build
-        uses: docker/build-push-action@6
+        uses: docker/build-push-action@v6
         with:
           context: .
           tags: ghcr.io/${{ github.repository }}:latest
