--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,37 +11,4 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata for image
-        id: metadata
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/${{ github.repository }}
-          tags: type=sha,prefix=,format=long
-          labels: |
-            org.opencontainers.image.title=${{ github.event.repository.name }}
-            org.opencontainers.image.description=${{ github.event.repository.description }}
-            org.opencontainers.image.revision=${{ github.sha }}
-            org.opencontainers.image.version=${{ github.sha }}
-            org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
-            org.opencontainers.image.url=${{ github.server_url }}/${{ github.repository }}
-
-      - name: Build
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          tags: ghcr.io/${{ github.repository }}:latest
-          cache-to: type=gha,mode=max
-          cache-from: type=gha
-          annotations: ${{ steps.meta.outputs.annotations }}
-          push: ${{ github.ref == 'refs/heads/main' }}
+      - uses: evanpurkhiser/workflows/docker.yml
