--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,4 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: evanpurkhiser/workflows/docker.yml
+      - uses: evanpurkhiser/workflows/docker.yml@main
