--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,6 @@ jobs:
     permissions:
       packages: write
 
-    uses: evanpurkhiser/workflows/docker.yml@main
+    uses: evanpurkhiser/workflows/.github/workflows/docker.yml@main
     with:
       publish: ${{ github.ref == 'refs/heads/main' }}
